@@ -1,0 +1,98 @@
+.TH AUTODIST "1" "April 2005" "@PACKAGE_NAME@ @VERSION@" "User Commands"
+.SH NAME
+Autodist \- Source distribution management system
+.SH SYNOPSIS
+.B autodist
+[options] [distribution] [version]
+.PP
+.SH DESCRIPTION
+.PP
+The Autodist is a source distribution management system that allows 
+powerful mechanisms to define what is included in and excluded from a 
+distribution, and what license the distribution is released under.  It is 
+also used to create the actual distribution source packages.  Autodist 
+allows distribution management in file, directory and file content level.  
+Different distributions may include different portions of files, for 
+example, excluding certain features from certain distributions.  It is 
+always guaranteed that anything not defined for the distribution, is 
+removed automatically (files, file content, directories), thus ensuring 
+that nothing is accidentally included in the distribution.
+.PP
+Autodist is closely related to the Autoconf and Automake tools, and 
+complements the features Autoconf and Automake provides.  It is especially 
+targeted into circumstances where multiple distributions are created from 
+one source tree.  The Autoconf and Automake environment is mainly designed 
+for one application per one source tree situations.  Autodist provides 
+mechanisms to create all kinds of distributions that can be created from 
+one source tree.  To be able to use Autodist, the Autoconf and Automake 
+must be installed into the system.
+.PP
+.SH OPTIONS
+.B Operation modes:
+.PP
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Prints the help for the Autodist and exits.
+.PP
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Prints version number and exits.
+.PP
+.TP
+\fB\-v\fR, \fB\-\-verbose\fR
+Verbosely report processing.
+.PP
+.TP
+\fB\-d\fR, \fB\-\-distdir\fR
+Search distributions from <dir> instead of default 'distdir'.
+.PP
+.TP
+\fB\-s\fR, \fB\-\-distdefs\fR \fB[<dist>]\fR
+Prints distribution defines of <dist> and exits.
+.PP
+.TP
+\fB\-i\fR, \fB\-\-init\fR
+Initializes Autodist environment.  Creates the default distribution
+directory 'distdir', 'autodist.conf' configuration file and the
+default distribution 'default', then exits.
+.PP
+.TP
+\fB\-m\fR, \fB\-\-makedist\fR
+Creates and packages distribution
+.PP
+.TP
+\fB\-\-gzip\fR
+Create package compressed with gzip (default)
+.PP
+.TP
+\fB\-\-bzip2\fR
+Create also package compressed with bzip2
+.PP
+.TP
+\fB\-\-compress\fR
+Create also package compressed with compress
+.PP
+.TP
+\fB\-\-zip\fR
+Create also package compressed with zip
+.SH COPYRIGHT
+Copyright \(co 2005 Pekka Riikonen, SILC Project
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+PURPOSE.
+.SH "SEE ALSO"
+.BR autoconf (1),
+.BR automake (1),
+.PP
+The full documentation for
+.B autodist
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B autodist
+programs are properly installed at your site, the command
+.IP
+.B info autodist
+.PP
+should give you access to the complete manual.
